--- a/src/components/PasswordGenerator.css
+++ b/src/components/PasswordGenerator.css
@@ -36,6 +36,11 @@
 	padding: 4rem 2rem 4rem 2rem;
 	/* padding-left: 2rem;
 	padding-right: 2rem; */
+	width: 424px;
+	margin: 5px 25px;
+	line-height: 35px;
+	/* position: absolute;
+	bottom: 220px; */
 }
 
 /* Hide the browser's default checkbox */
