--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 
 body {
   margin: 0;
+  padding: 0px;
+  height: 100vh;
+  /* background-color: #1E1E1E; */
+  background-color: aqua;
   font-family: "Space mono", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
